Fix some ui things